src/libqlabel.h

#pragma once
#ifndef SRCC_LIBQLABEL_H
#define SRCC_LIBQLABEL_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __GNUC__
#pragma GCC diagnostic ignored "-Wdeprecated-declarations"
#endif

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#if defined(WORKAROUND_INNER_CLASS_DEFINITION_QMetaObject__Connection)
typedef QMetaObject::Connection QMetaObject__Connection;
#endif
#else
typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QAnyStringView QAnyStringView;
typedef struct QBackingStore QBackingStore;
typedef struct QBindingStorage QBindingStorage;
typedef struct QBitmap QBitmap;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QCursor QCursor;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QFrame QFrame;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QLabel QLabel;
typedef struct QLayout QLayout;
typedef struct QLocale QLocale;
typedef struct QMargins QMargins;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QMovie QMovie;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPalette QPalette;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSizePolicy QSizePolicy;
typedef struct QStyle QStyle;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QThread QThread;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
#endif

QLabel* QLabel_new(QWidget* parent);
QLabel* QLabel_new2();
QLabel* QLabel_new3(libqt_string text);
QLabel* QLabel_new4(QWidget* parent, int f);
QLabel* QLabel_new5(libqt_string text, QWidget* parent);
QLabel* QLabel_new6(libqt_string text, QWidget* parent, int f);
QMetaObject* QLabel_MetaObject(const QLabel* self);
void* QLabel_Metacast(QLabel* self, const char* param1);
int QLabel_Metacall(QLabel* self, int param1, int param2, void** param3);
void QLabel_OnMetacall(QLabel* self, intptr_t slot);
int QLabel_QBaseMetacall(QLabel* self, int param1, int param2, void** param3);
libqt_string QLabel_Tr(const char* s);
libqt_string QLabel_Text(const QLabel* self);
QPixmap* QLabel_Pixmap(const QLabel* self, int param1);
QPixmap* QLabel_Pixmap2(const QLabel* self);
QPicture* QLabel_Picture(const QLabel* self, int param1);
QPicture* QLabel_Picture2(const QLabel* self);
QMovie* QLabel_Movie(const QLabel* self);
int QLabel_TextFormat(const QLabel* self);
void QLabel_SetTextFormat(QLabel* self, int textFormat);
int QLabel_Alignment(const QLabel* self);
void QLabel_SetAlignment(QLabel* self, int alignment);
void QLabel_SetWordWrap(QLabel* self, bool on);
bool QLabel_WordWrap(const QLabel* self);
int QLabel_Indent(const QLabel* self);
void QLabel_SetIndent(QLabel* self, int indent);
int QLabel_Margin(const QLabel* self);
void QLabel_SetMargin(QLabel* self, int margin);
bool QLabel_HasScaledContents(const QLabel* self);
void QLabel_SetScaledContents(QLabel* self, bool scaledContents);
QSize* QLabel_SizeHint(const QLabel* self);
void QLabel_OnSizeHint(const QLabel* self, intptr_t slot);
QSize* QLabel_QBaseSizeHint(const QLabel* self);
QSize* QLabel_MinimumSizeHint(const QLabel* self);
void QLabel_OnMinimumSizeHint(const QLabel* self, intptr_t slot);
QSize* QLabel_QBaseMinimumSizeHint(const QLabel* self);
void QLabel_SetBuddy(QLabel* self, QWidget* buddy);
QWidget* QLabel_Buddy(const QLabel* self);
int QLabel_HeightForWidth(const QLabel* self, int param1);
void QLabel_OnHeightForWidth(const QLabel* self, intptr_t slot);
int QLabel_QBaseHeightForWidth(const QLabel* self, int param1);
bool QLabel_OpenExternalLinks(const QLabel* self);
void QLabel_SetOpenExternalLinks(QLabel* self, bool open);
void QLabel_SetTextInteractionFlags(QLabel* self, int flags);
int QLabel_TextInteractionFlags(const QLabel* self);
void QLabel_SetSelection(QLabel* self, int param1, int param2);
bool QLabel_HasSelectedText(const QLabel* self);
libqt_string QLabel_SelectedText(const QLabel* self);
int QLabel_SelectionStart(const QLabel* self);
void QLabel_SetText(QLabel* self, libqt_string text);
void QLabel_SetPixmap(QLabel* self, QPixmap* pixmap);
void QLabel_SetPicture(QLabel* self, QPicture* picture);
void QLabel_SetMovie(QLabel* self, QMovie* movie);
void QLabel_SetNum(QLabel* self, int num);
void QLabel_SetNumWithNum(QLabel* self, double num);
void QLabel_Clear(QLabel* self);
void QLabel_LinkActivated(QLabel* self, libqt_string link);
void QLabel_Connect_LinkActivated(QLabel* self, intptr_t slot);
void QLabel_LinkHovered(QLabel* self, libqt_string link);
void QLabel_Connect_LinkHovered(QLabel* self, intptr_t slot);
bool QLabel_Event(QLabel* self, QEvent* e);
void QLabel_OnEvent(QLabel* self, intptr_t slot);
bool QLabel_QBaseEvent(QLabel* self, QEvent* e);
void QLabel_KeyPressEvent(QLabel* self, QKeyEvent* ev);
void QLabel_OnKeyPressEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseKeyPressEvent(QLabel* self, QKeyEvent* ev);
void QLabel_PaintEvent(QLabel* self, QPaintEvent* param1);
void QLabel_OnPaintEvent(QLabel* self, intptr_t slot);
void QLabel_QBasePaintEvent(QLabel* self, QPaintEvent* param1);
void QLabel_ChangeEvent(QLabel* self, QEvent* param1);
void QLabel_OnChangeEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseChangeEvent(QLabel* self, QEvent* param1);
void QLabel_MousePressEvent(QLabel* self, QMouseEvent* ev);
void QLabel_OnMousePressEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseMousePressEvent(QLabel* self, QMouseEvent* ev);
void QLabel_MouseMoveEvent(QLabel* self, QMouseEvent* ev);
void QLabel_OnMouseMoveEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseMouseMoveEvent(QLabel* self, QMouseEvent* ev);
void QLabel_MouseReleaseEvent(QLabel* self, QMouseEvent* ev);
void QLabel_OnMouseReleaseEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseMouseReleaseEvent(QLabel* self, QMouseEvent* ev);
void QLabel_ContextMenuEvent(QLabel* self, QContextMenuEvent* ev);
void QLabel_OnContextMenuEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseContextMenuEvent(QLabel* self, QContextMenuEvent* ev);
void QLabel_FocusInEvent(QLabel* self, QFocusEvent* ev);
void QLabel_OnFocusInEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseFocusInEvent(QLabel* self, QFocusEvent* ev);
void QLabel_FocusOutEvent(QLabel* self, QFocusEvent* ev);
void QLabel_OnFocusOutEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseFocusOutEvent(QLabel* self, QFocusEvent* ev);
bool QLabel_FocusNextPrevChild(QLabel* self, bool next);
void QLabel_OnFocusNextPrevChild(QLabel* self, intptr_t slot);
bool QLabel_QBaseFocusNextPrevChild(QLabel* self, bool next);
libqt_string QLabel_Tr2(const char* s, const char* c);
libqt_string QLabel_Tr3(const char* s, const char* c, int n);
int QLabel_DevType(const QLabel* self);
void QLabel_OnDevType(const QLabel* self, intptr_t slot);
int QLabel_QBaseDevType(const QLabel* self);
void QLabel_SetVisible(QLabel* self, bool visible);
void QLabel_OnSetVisible(QLabel* self, intptr_t slot);
void QLabel_QBaseSetVisible(QLabel* self, bool visible);
bool QLabel_HasHeightForWidth(const QLabel* self);
void QLabel_OnHasHeightForWidth(const QLabel* self, intptr_t slot);
bool QLabel_QBaseHasHeightForWidth(const QLabel* self);
QPaintEngine* QLabel_PaintEngine(const QLabel* self);
void QLabel_OnPaintEngine(const QLabel* self, intptr_t slot);
QPaintEngine* QLabel_QBasePaintEngine(const QLabel* self);
void QLabel_MouseDoubleClickEvent(QLabel* self, QMouseEvent* event);
void QLabel_OnMouseDoubleClickEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseMouseDoubleClickEvent(QLabel* self, QMouseEvent* event);
void QLabel_WheelEvent(QLabel* self, QWheelEvent* event);
void QLabel_OnWheelEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseWheelEvent(QLabel* self, QWheelEvent* event);
void QLabel_KeyReleaseEvent(QLabel* self, QKeyEvent* event);
void QLabel_OnKeyReleaseEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseKeyReleaseEvent(QLabel* self, QKeyEvent* event);
void QLabel_EnterEvent(QLabel* self, QEnterEvent* event);
void QLabel_OnEnterEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseEnterEvent(QLabel* self, QEnterEvent* event);
void QLabel_LeaveEvent(QLabel* self, QEvent* event);
void QLabel_OnLeaveEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseLeaveEvent(QLabel* self, QEvent* event);
void QLabel_MoveEvent(QLabel* self, QMoveEvent* event);
void QLabel_OnMoveEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseMoveEvent(QLabel* self, QMoveEvent* event);
void QLabel_ResizeEvent(QLabel* self, QResizeEvent* event);
void QLabel_OnResizeEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseResizeEvent(QLabel* self, QResizeEvent* event);
void QLabel_CloseEvent(QLabel* self, QCloseEvent* event);
void QLabel_OnCloseEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseCloseEvent(QLabel* self, QCloseEvent* event);
void QLabel_TabletEvent(QLabel* self, QTabletEvent* event);
void QLabel_OnTabletEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseTabletEvent(QLabel* self, QTabletEvent* event);
void QLabel_ActionEvent(QLabel* self, QActionEvent* event);
void QLabel_OnActionEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseActionEvent(QLabel* self, QActionEvent* event);
void QLabel_DragEnterEvent(QLabel* self, QDragEnterEvent* event);
void QLabel_OnDragEnterEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseDragEnterEvent(QLabel* self, QDragEnterEvent* event);
void QLabel_DragMoveEvent(QLabel* self, QDragMoveEvent* event);
void QLabel_OnDragMoveEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseDragMoveEvent(QLabel* self, QDragMoveEvent* event);
void QLabel_DragLeaveEvent(QLabel* self, QDragLeaveEvent* event);
void QLabel_OnDragLeaveEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseDragLeaveEvent(QLabel* self, QDragLeaveEvent* event);
void QLabel_DropEvent(QLabel* self, QDropEvent* event);
void QLabel_OnDropEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseDropEvent(QLabel* self, QDropEvent* event);
void QLabel_ShowEvent(QLabel* self, QShowEvent* event);
void QLabel_OnShowEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseShowEvent(QLabel* self, QShowEvent* event);
void QLabel_HideEvent(QLabel* self, QHideEvent* event);
void QLabel_OnHideEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseHideEvent(QLabel* self, QHideEvent* event);
bool QLabel_NativeEvent(QLabel* self, libqt_string eventType, void* message, intptr_t* result);
void QLabel_OnNativeEvent(QLabel* self, intptr_t slot);
bool QLabel_QBaseNativeEvent(QLabel* self, libqt_string eventType, void* message, intptr_t* result);
void QLabel_InputMethodEvent(QLabel* self, QInputMethodEvent* param1);
void QLabel_OnInputMethodEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseInputMethodEvent(QLabel* self, QInputMethodEvent* param1);
QVariant* QLabel_InputMethodQuery(const QLabel* self, int param1);
void QLabel_OnInputMethodQuery(const QLabel* self, intptr_t slot);
QVariant* QLabel_QBaseInputMethodQuery(const QLabel* self, int param1);
bool QLabel_EventFilter(QLabel* self, QObject* watched, QEvent* event);
void QLabel_OnEventFilter(QLabel* self, intptr_t slot);
bool QLabel_QBaseEventFilter(QLabel* self, QObject* watched, QEvent* event);
void QLabel_TimerEvent(QLabel* self, QTimerEvent* event);
void QLabel_OnTimerEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseTimerEvent(QLabel* self, QTimerEvent* event);
void QLabel_ChildEvent(QLabel* self, QChildEvent* event);
void QLabel_OnChildEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseChildEvent(QLabel* self, QChildEvent* event);
void QLabel_CustomEvent(QLabel* self, QEvent* event);
void QLabel_OnCustomEvent(QLabel* self, intptr_t slot);
void QLabel_QBaseCustomEvent(QLabel* self, QEvent* event);
void QLabel_ConnectNotify(QLabel* self, QMetaMethod* signal);
void QLabel_OnConnectNotify(QLabel* self, intptr_t slot);
void QLabel_QBaseConnectNotify(QLabel* self, QMetaMethod* signal);
void QLabel_DisconnectNotify(QLabel* self, QMetaMethod* signal);
void QLabel_OnDisconnectNotify(QLabel* self, intptr_t slot);
void QLabel_QBaseDisconnectNotify(QLabel* self, QMetaMethod* signal);
void QLabel_InitStyleOption(const QLabel* self, QStyleOptionFrame* option);
void QLabel_OnInitStyleOption(const QLabel* self, intptr_t slot);
void QLabel_QBaseInitStyleOption(const QLabel* self, QStyleOptionFrame* option);
int QLabel_Metric(const QLabel* self, int param1);
void QLabel_OnMetric(const QLabel* self, intptr_t slot);
int QLabel_QBaseMetric(const QLabel* self, int param1);
void QLabel_InitPainter(const QLabel* self, QPainter* painter);
void QLabel_OnInitPainter(const QLabel* self, intptr_t slot);
void QLabel_QBaseInitPainter(const QLabel* self, QPainter* painter);
QPaintDevice* QLabel_Redirected(const QLabel* self, QPoint* offset);
void QLabel_OnRedirected(const QLabel* self, intptr_t slot);
QPaintDevice* QLabel_QBaseRedirected(const QLabel* self, QPoint* offset);
QPainter* QLabel_SharedPainter(const QLabel* self);
void QLabel_OnSharedPainter(const QLabel* self, intptr_t slot);
QPainter* QLabel_QBaseSharedPainter(const QLabel* self);
void QLabel_DrawFrame(QLabel* self, QPainter* param1);
void QLabel_OnDrawFrame(QLabel* self, intptr_t slot);
void QLabel_QBaseDrawFrame(QLabel* self, QPainter* param1);
void QLabel_UpdateMicroFocus(QLabel* self);
void QLabel_OnUpdateMicroFocus(QLabel* self, intptr_t slot);
void QLabel_QBaseUpdateMicroFocus(QLabel* self);
void QLabel_Create(QLabel* self);
void QLabel_OnCreate(QLabel* self, intptr_t slot);
void QLabel_QBaseCreate(QLabel* self);
void QLabel_Destroy(QLabel* self);
void QLabel_OnDestroy(QLabel* self, intptr_t slot);
void QLabel_QBaseDestroy(QLabel* self);
bool QLabel_FocusNextChild(QLabel* self);
void QLabel_OnFocusNextChild(QLabel* self, intptr_t slot);
bool QLabel_QBaseFocusNextChild(QLabel* self);
bool QLabel_FocusPreviousChild(QLabel* self);
void QLabel_OnFocusPreviousChild(QLabel* self, intptr_t slot);
bool QLabel_QBaseFocusPreviousChild(QLabel* self);
QObject* QLabel_Sender(const QLabel* self);
void QLabel_OnSender(const QLabel* self, intptr_t slot);
QObject* QLabel_QBaseSender(const QLabel* self);
int QLabel_SenderSignalIndex(const QLabel* self);
void QLabel_OnSenderSignalIndex(const QLabel* self, intptr_t slot);
int QLabel_QBaseSenderSignalIndex(const QLabel* self);
int QLabel_Receivers(const QLabel* self, const char* signal);
void QLabel_OnReceivers(const QLabel* self, intptr_t slot);
int QLabel_QBaseReceivers(const QLabel* self, const char* signal);
bool QLabel_IsSignalConnected(const QLabel* self, QMetaMethod* signal);
void QLabel_OnIsSignalConnected(const QLabel* self, intptr_t slot);
bool QLabel_QBaseIsSignalConnected(const QLabel* self, QMetaMethod* signal);
void QLabel_Delete(QLabel* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif